[gd_scene load_steps=8 format=3 uid="uid://bxuqase5mx6iy"]

[ext_resource type="Script" uid="uid://dnr276tk5dwid" path="res://scripts/level_up_screen.gd" id="1_tujht"]

[sub_resource type="LabelSettings" id="LabelSettings_tujht"]
font_size = 45

[sub_resource type="LabelSettings" id="LabelSettings_502pc"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_16lk3"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_qmtfy"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_5l1el"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_sr6tv"]
font_size = 50

[node name="LevelUpScreen" type="Control"]
process_mode = 3
visible = false
z_index = 20
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tujht")

[node name="Option1" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 192.0
offset_right = 599.0
offset_bottom = 890.0

[node name="OptionType" type="Label" parent="Option1"]
layout_mode = 0
offset_left = 16.0
offset_top = 144.0
offset_right = 417.0
offset_bottom = 213.0
text = "attack speed yay!!!"
label_settings = SubResource("LabelSettings_tujht")

[node name="OptionDetails" type="Label" parent="Option1"]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 348.0
offset_bottom = 325.0
text = "sample text"
label_settings = SubResource("LabelSettings_502pc")

[node name="Option2" type="Button" parent="."]
layout_mode = 0
offset_left = 744.0
offset_top = 192.0
offset_right = 1183.0
offset_bottom = 890.0

[node name="OptionType" type="Label" parent="Option2"]
layout_mode = 0
offset_left = 48.0
offset_top = 136.0
offset_right = 393.0
offset_bottom = 205.0
text = "damage yay!!!!"
label_settings = SubResource("LabelSettings_16lk3")

[node name="OptionDetails" type="Label" parent="Option2"]
layout_mode = 0
offset_left = 80.0
offset_top = 256.0
offset_right = 364.0
offset_bottom = 325.0
text = "sample text"
label_settings = SubResource("LabelSettings_qmtfy")

[node name="Option3" type="Button" parent="."]
layout_mode = 0
offset_left = 1320.0
offset_top = 184.0
offset_right = 1759.0
offset_bottom = 882.0

[node name="OptionType" type="Label" parent="Option3"]
layout_mode = 0
offset_left = 8.0
offset_top = 144.0
offset_right = 445.0
offset_bottom = 213.0
text = "movespeed... yay?"
label_settings = SubResource("LabelSettings_5l1el")

[node name="OptionDetails" type="Label" parent="Option3"]
layout_mode = 0
offset_left = 80.0
offset_top = 264.0
offset_right = 364.0
offset_bottom = 333.0
text = "sample text"
label_settings = SubResource("LabelSettings_sr6tv")

[connection signal="pressed" from="Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="Option3" to="." method="_on_option_3_pressed"]
